--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,9 @@
 {
   "presets":[
     "react",
-    "es2015-loose",
+    "es2015",
     "stage-0",
     "stage-1"
   ]
+  ,"plugins": ["transform-es2015-modules-umd"]
 }
