--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "react-pagenav",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "react pagenav component",
-  "main": "src/react-pagenav.jsx",
+  "main": "dist/react-pagenav.js",
   "scripts": {
     "dev": "gulp watch",
     "build": "gulp build",
