--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,9 @@
 language: node_js
 sudo: false
 node_js:
-  - "5"
+  - "6"
 before_script:
   - npm install -g gulp
-  - npm install -g bower
-  - bower install
+  - npm i react react-dom
 script: gulp test
   
