--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "dev": "gulp watch",
     "build": "gulp build",
+    "start": "./node_modules/.bin/npm-run-all -p dev:server dev:client ",
+    "dev:server": "node --debug build/dev-server",
+    "build": "rm dist/*.* && NODE_ENV=production ./node_modules/.bin/webpack -p --progress",
+    "dev:client": "./node_modules/.bin/webpack-dev-server --progress --colors --inline --content-base dist/",
     "test": "gulp test"
   },
   "author": {
@@ -34,6 +38,7 @@
     "babel-preset-stage-0": "^6.5.0",
     "babel-preset-stage-1": "^6.5.0",
     "babel-preset-stage-2": "^6.5.0",
+    "bootstrap": "^4.0.0-alpha.4",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-concat-util": "^0.5.5",
@@ -48,11 +53,19 @@
     "karma-coverage": "*",
     "karma-mocha": "*",
     "karma-phantomjs-launcher": "*",
+    "koa": "^1.2.4",
+    "koa-mount": "^1.3.0",
+    "koa-pug": "^3.0.0-0",
+    "koa-router": "^5.4.0",
+    "koa-static": "^2.0.0",
     "mocha": "*",
+    "npm-run-all": "^3.1.0",
+    "open-browser-webpack-plugin": "0.0.2",
     "phantomjs-prebuilt": "*",
     "raw-loader": "^0.5.1",
     "react-addons-test-utils": "^15.1.0",
     "run-sequence": "^1.2.1",
+    "unminified-webpack-plugin": "^1.1.0",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
   },
