--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
   "name": "react-pagenav",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "description": "react pagenav component",
   "main": "dist/react-pagenav.js",
   "scripts": {
     "dev": "gulp watch",
-    "build": "gulp build",
+    "build": "rm dist/*.* && NODE_ENV=production ./node_modules/.bin/webpack -p --progress",
     "start": "./node_modules/.bin/npm-run-all -p dev:server dev:client ",
     "dev:server": "node --debug build/dev-server",
-    "build": "rm dist/*.* && NODE_ENV=production ./node_modules/.bin/webpack -p --progress",
     "dev:client": "./node_modules/.bin/webpack-dev-server --progress --colors --inline --content-base dist/",
-    "test": "gulp test"
+    "test": "./node_modules/.bin/karma start ./test/karma.conf.js"
   },
   "author": {
     "email": "zxdong@gmail.com",
@@ -39,20 +38,13 @@
     "babel-preset-stage-1": "^6.5.0",
     "babel-preset-stage-2": "^6.5.0",
     "bootstrap": "^4.0.0-alpha.4",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
-    "gulp-concat-util": "^0.5.5",
-    "gulp-plumber": "^1.1.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-uglify": "^1.5.3",
-    "gulp-util": "^3.0.7",
-    "gulp-watch": "^4.3.6",
     "karma": "*",
     "karma-chai-plugins": "*",
     "karma-coverage": "*",
     "karma-mocha": "*",
     "karma-phantomjs-launcher": "*",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^1.8.0",
     "koa": "^1.2.4",
     "koa-mount": "^1.3.0",
     "koa-pug": "^3.0.0-0",
