--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "babel-preset-stage-1": "^6.5.0",
     "babel-preset-stage-2": "^6.5.0",
     "bootstrap": "^4.0.0-alpha.4",
+    "jquery": "^3.1.0",
     "karma": "*",
     "karma-chai-plugins": "*",
     "karma-coverage": "*",
@@ -58,7 +59,7 @@
     "react-addons-test-utils": "^15.1.0",
     "run-sequence": "^1.2.1",
     "unminified-webpack-plugin": "^1.1.0",
-    "webpack": "^1.13.1",
+    "webpack": "^1.13.2",
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {},
