more props and v 0.4.0 ok

--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "react pagenav component",
   "main": "dist/react-pagenav.js",
   "scripts": {
-    "start": "npm-run-all -p dev:server dev:client build",
+    "start": "npm run dev:server && npm run dev:client && npm run build",
     "build": "rm dist/*.* && NODE_ENV=production ./node_modules/.bin/webpack -p --progress",
     "start": "./node_modules/.bin/npm-run-all -p dev:server dev:client ",
-    "dev:server": "node --debug build/dev-server",
+    "dev:server": "node build/dev-server",
+    "dev:server-debug": "node --debug build/dev-server",
     "dev:client": "./node_modules/.bin/webpack-dev-server --progress --colors --inline --content-base dist/",
     "test": "./node_modules/.bin/karma start ./test/karma.conf.js"
   },
